tests/baselines/reference/noEmitOnError.errors.txt
tests/cases/compiler/noEmitOnError.ts(1,5): error TS2322: Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/noEmitOnError.ts (1 errors) ====
    var x: number = "";
        ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    